# stock-manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
stock_manager/: main.py
tests/: test_foo.py
